--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number game</title>
-</head>
+    <link rel="stylesheet" href="css.css"></head>
 <body>
-    input your minimum and maximum:<br>
-    <input type="number" title="minimum" id="minimum" value="1">
-    <input type="number" title="maximum" id="maximum" value="100">
-    <br>
-    <button title="generate a number" onclick="generate()">generate a number</button>
+    Input your minimum and maximum:<br>
+    <input type="number" title="minimum" id="minimum" value="1" placeholder="minimum" onkeydown="enterGenerate()">
+    <input type="number" title="maximum" id="maximum" value="100" placeholder="maximum" onkeydown="enterGenerate()">
+    <input type="submit" title="generate a number" onclick="generate()" value="generate a number">
     <br><br>
-    input your guess:<br>
-    <input type="number" id="input">
-    <button title="guess" onclick="solve()">guess</button>
+    Input your guess:<br>
+    <input type="number" id="input" placeholder="Input your number here." onkeydown="enterSolve()" autofocus="True">
+    <input type="submit" title="guess" onclick="solve()" value="guess">
     <br>
-    <b>Your guesses:</b>
+    <h1 id="relations"></h1>
+    <br>
+    <b>Recordings of your inputs:</b>
     <p id = "list"></p>
 
-    <script>
-        document.getElementById("demo").innerHTML = document.getElementById("demo").innerHTML + String();
-    </script>
     <script src="./script.js"></script>
 </body>
 </html>
