--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
         Input your minimum and maximum:<br>
         <br>Minimum: <input type="number" title="minimum" id="minimum" value="1" placeholder="minimum" onkeydown="enterGenerate()">
         <br>Maximum: <input type="number" title="maximum" id="maximum" value="100" placeholder="maximum" onkeydown="enterGenerate()">
-        <br><input type="submit" title="generate a number" onclick="generate()" value="generate a number">
+        <br><br><input class="button" id="gen" type="submit" title="generate a number" onclick="generate()" value="generate a number">
         <br><br>
     </div>
+    <hr>
     <div class="input">
     Input your guess:<br>
         <input type="number" id="input" placeholder="Input your number here." onkeydown="enterSolve()" autofocus="True">
-        <br>
-        <input type="submit" title="guess" onclick="solve()" value="guess">
+        <br><br>
+        <input class="button" id="solve" type="submit" title="guess" onclick="solve()" value="guess">
     </div>
 
     <br>
